# aiida-abinit

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  conftest.py  pyproject.toml  setup.json  setup.py
.github/workflows/: cd.yml  ci.yml  develop.yml  validate_release_tag.py
aiida_abinit/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py  utils.py
aiida_abinit/utils/: __init__.py  dictionary.py  kpoints.py  pseudos.py  resources.py  standard.djson  utils.py
aiida_abinit/workchains/: __init__.py  base.py
aiida_abinit/workflows/: __init__.py  base.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: code.yml  computer.yml  example_01.py  example_base.py  example_calculation.py  example_dft.py  example_relax.py
tests/: __init__.py  conftest.py  test_calculations.py  test_cli.py
tests/calculations/: test_abinit.py
tests/calculations/test_abinit/: test_abinit_default.in  test_abinit_retrieve_0_False_retrieve_list0_.in  test_abinit_retrieve_0_True_retrieve_list2_.in  test_abinit_retrieve_2_False_retrieve_list1_.in  test_abinit_retrieve_2_True_retrieve_list3_.in
tests/fixtures/pseudos/: Si.psp8
utils/: validate_version_number.py
